@@ -159,7 +159,7 @@ ext {
     libs.log4j2Api,
     libs.log4j2Core
   ]
-
+  
 }
 
 allprojects {
@@ -510,6 +510,7 @@ subprojects {
   // Gradle will run each test class, so we exclude the suites to avoid redundantly running the tests twice.
   def testsToExclude = ['**/*Suite.class']
 
+  
   // This task will copy JUnit XML files out of the sub-project's build directory and into
   // a top-level build/junit-xml directory. This is necessary to avoid reporting on tests which
   // were not run, but instead were restored via FROM-CACHE. See KAFKA-17479 for more details.
@@ -541,7 +542,7 @@ subprojects {
   test {
 
     doFirst {
-      jvmArgs("-javaagent:${configurations.mockitoAgent.asPath}")
+      jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 
     maxParallelForks = maxTestForks
@@ -3357,7 +3358,7 @@ project(':jmh-benchmarks') {
     mainClass = "-jar"
 
     doFirst {
-      jvmArgs("-javaagent:${configurations.mockitoAgent.asPath}")
+      jvmArgs("-XX:+EnableDynamicAgentLoading")
       if (System.getProperty("jmhArgs")) {
           args System.getProperty("jmhArgs").split(' ')
       }
